--- a/Index.html
+++ b/Index.html
@@ -87,6 +87,7 @@ p {
   	<!-- EXTRASOURCES -->
     <!-- Loads the Javascript code...-->
   	<script src="src/Runtime.js"></script>
+	  <script src="src/zlib.min.js"></script>
 
     <script>
         // Detects if the html file is ran locally.
