--- a/Index.html
+++ b/Index.html
@@ -58,13 +58,13 @@ p {
 	border-radius: 7px;
 	margin: 0 auto;
 	padding: 5px;
-	width:1280px;
-	height:720px;
+	width:640px;
+	height:480px;
 }
 
 #canvas {
-	width:1280px; 
-	height:720px;
+	width:640px; 
+	height:480px;
 }
 
 #MMFCanvas {
@@ -110,7 +110,7 @@ p {
     <div id="wrapper">
 	    <div id="border">
 		    <div id="canvas">
-			    <canvas id="MMFCanvas" width="1280" height="720">
+			    <canvas id="MMFCanvas" width="640" height="480">
 				    <p>Your browser does not support Canvas.</p>
 			    </canvas>   
 		    </div>
@@ -125,7 +125,7 @@ p {
 	        // Calls the runtime
 	        // First parameter : name of the canvas element
 	        // Second parameter : path to the cch file. Images and sounds must lay beside this file
-	        new Runtime("MMFCanvas", "resources/SOCIETY_CLIENT.cch");
+	        new Runtime("MMFCanvas", "resources/BRIGHT_CLIENT.cch");
 	    }
 	    // RUNTIMESTARTEND
     </script>
